--- a/views/read.ejs
+++ b/views/read.ejs
@@ -16,26 +16,26 @@
         <h3 class="text-3xl tracking-tighter mb-3">All Users</h3>
         
      <div class="users flex gap-3 flex-wrap">
+
+        <% if(user.length > 0) { %>
+                   <% user.forEach(function(users){ %>
         <div class="user w-72 p-4  bg-zinc-800 rounded-lg">
-            <div class="w-full h-52 bg-zinc-600 rounded-lg"></div>
-            <h3 class="text-white text-xl tracking-tighter">abhinav bhargava</h3>
-            <h5 class="text-zinc-500">abhi@gmail.com</h5>
+            <div class="w-full h-52 bg-zinc-600 rounded-lg overflow-hidden">
+                <img class="w-full h-full object-cover"  src="<%= users.image %>" alt="">
+            </div>
+            <h3 class="text-white text-xl tracking-tighter"><%= users.name %></h3>
+            <h5 class="text-zinc-500"><%= users.email %></h5>
             <div class="flex gap-3 mt-10">
                 <a href="" class="text-yellow-500">edit user</a>
-                <a href=""class="text-red-600">delete user</a>
+                <a href="/delete/<%= users._id %>"class="text-red-600" >delete user</a>
             </div>
             
-        </div>
-        <div class="user w-72 p-4  bg-zinc-800 rounded-lg">
-            <div class="w-full h-52 bg-zinc-600 rounded-lg"></div>
-            <h3 class="text-white text-xl tracking-tighter">abhinav bhargava</h3>
-            <h5 class="text-zinc-500">abhi@gmail.com</h5>
-            <div class="flex gap-3 mt-10">
-                <a href="" class="text-yellow-500">edit user</a>
-                <a href=""class="text-red-600">delete user</a>
-            </div>
-            
-        </div>
+      </div>
+           <% }) %>
+           
+             <% } else { %>
+              <h3>No Users yet</h3>
+        <% } %>
 
      </div>
     </div>
